[package]
name = "layouts"
description = "Format any Serde-compatible data structure with zero-config"
license = "ISC OR Apache-2"
repository = "https://github.com/ergorusty/layouts"
version = "0.1.1"
edition = "2018"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1.1"
pretty = "0.10.0"
tycho = "0.1.2"
